# dominator

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: checks.yml
dominator/: __init__.py  app.py  dominator.js
examples/: desktop_app.py
