[metadata]
name = dominator
version = 0.0.0b0
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = EUPL 1.2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/broa-irc/broa

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    tornado

[options.extras_require]
app =
    webruntime
test =
    pytest
    pytest-cov

[flake8]
max-line-length = 127
max-complexity = 10
per-file-ignores =
    examples/desktop_app.py: E501

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = dominator
default_section = THIRDPARTY

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src

[coverage:html]
show_contexts = true
